sass/main.sass
@import _classes

$mobile-portrait: 420px

$white: #fff

// Pallet of gray and blue-gray with an accent color of red.
   Colors from https://material.google.com/style/color.html#color-color-palette

$background: #212121
$background-blue: #37474f
$background-blue-darker: darken($background-blue, 5)
$background-blue-lighter: lighten($background-blue, 5)
$accent-200: #ff5252

$text: #fff

*
  box-sizing: border-box

  &::before,
  &::after
    box-sizing: border-box


body
  margin: 0
  font-family: 'Arvo', sans-serif
  background-color: $background-blue-darker


// HEADER STYLES --------------------------------------------------------------


header

  height: 100vh

  h1
    color: $white
    margin: 0
    font-weight: 400

    // ScrollMagic's .setPin() won't update position when the window is resized
    // so I'm fixing the header from CSS
    position: fixed

    // Portrait devices

    @media (orientation: portrait)
      top: 50vh
      transform: translateY(-50%)

      background-color: transparentize($white, .75)
      padding: 2vh 0 2vh 15vw
      word-spacing: 100vw

      text-align: left
      font-size: 15vw

    // Landscape devices

    @media (orientation: landscape)
      top: 50vh
      left: 50vw
      transform: translate(-50%, -50%)

      font-size: 5vw
      text-align: center


canvas
  position: fixed
  top: 0
  left: 0
  width: 100vw
  height: 100vh


section
  width: 100vw
  height: 100vh
  padding: 10vh

